# smart-dj-cuegen

./: .gitignore  README.md  pyproject.toml
config/: rules.yaml
docs/: test-plan.md
docs/superpowers/plans/: 2026-04-23-smart-dj-cuegen.md  2026-04-27-stems-cache.md
docs/superpowers/specs/: 2026-04-23-dj-cue-system-design.md  2026-04-26-stems-cache-design.md
src/dj_cue_system/: cli.py
src/dj_cue_system/analysis/: anlz.py  assembler.py  bar_utils.py  fallback.py  fast_stems.py  models.py  onset.py  separation.py
src/dj_cue_system/backup/: diff.py  reader.py  writer.py
src/dj_cue_system/rules/: config.py  engine.py
src/dj_cue_system/stems/: cache.py  jobs.py
src/dj_cue_system/writers/: base.py  dry_run.py  rekordbox_xml.py
tests/analysis/: test_anlz.py  test_assembler.py  test_bar_utils.py  test_fallback.py  test_models.py  test_onset.py
tests/backup/: test_backup.py
tests/cli/: test_cli.py
tests/rules/: test_config.py  test_engine.py
tests/stems/: test_cache.py  test_jobs.py
tests/writers/: test_rekordbox_xml.py
