[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-dj-cuegen"
version = "0.1.0"
requires-python = ">=3.11"
# Note: allin1 depends on madmom, which requires Python <=3.11 to build from source.
# allin1 is only used as a fallback for tracks not in your Rekordbox library.
# Tracks already analyzed by Rekordbox use ANLZ files instead and do not require allin1.
dependencies = [
    "pyrekordbox>=0.4.4",
    "sqlcipher3-wheels>=0.5.7",
    "demucs>=4.0.0",
    "allin1>=0.1.0",
    "librosa>=0.10.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
dj-cue = "dj_cue_system.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dj_cue_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
